Fixes #395: Fix cards overlap on community pages

--- a/src/styles/_viewCauseView.scss
+++ b/src/styles/_viewCauseView.scss
@@ -8,7 +8,7 @@
   }
 
   .card {
-    min-width: 300px;
+    min-width: 200px;
     margin-bottom: 1rem;
   }
 }
